--- a/public/index.html
+++ b/public/index.html
@@ -9,4 +9,8 @@
   <body>
     <main></main>
   </body>
+  <script
+    src="https://kit.fontawesome.com/1983abc257.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
